# GenAssembly

./: CMakeLists.txt  Makefile  README.md  containmenthash.cpp  minhash.cpp  nthash.hpp
contHash/: .contHash.cpp.swp  BloomFilter.cpp  Makefile  MinhashNaive.cpp  README.md  b.fna  contHash.cpp  containmentHash  example.txt  input.txt  query  query.cpp
contHash/include/: BloomFilter.h  MinhashNaive.h  MurmurHash3.h
contHash/test/: temp.py
